Header, skill layout and inital style

--- a/main.html
+++ b/main.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/641e3a6fa4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <title>Adrian's Designer Web Page</title>
@@ -14,7 +13,7 @@
     <!--Header-->
     <header id="header">
         <nav class="nav-container">
-            <div class="logo-container"><h2>Logo goes here</h2></div>
+            <div class="logo-container"><h1>Logo goes here</h1></div>
             <div class="links-container">
                 <ul>
                     <li>Home</li>
@@ -31,15 +30,17 @@
         <section class="below-nav">
             <!--left-->
             <div class="left-below-nav">
-                <h2>placeholder</h2>
-                <p>big text goes here</p>
+                <h2 id="greeting">Hello!|</h2>
+                <p>I'm</p> 
+                <span>Adrian Saferstein</span> 
+                <p>Front end Developer</p>
                 <button type="button"><a href="#contact">Contact</a></button>
             </div>
             <!--right-->
             <div class="right-below-nav">
                 <figure>
-                    <img>
-                    <figcaption></figcaption>
+                    <img src="./Imagenes/Others/spacer.png">
+                    <figcaption>An image of a friendly floating spacer</figcaption>
                 </figure>
             </div>
         </section>
@@ -53,7 +54,9 @@
         <!--Cards-->
         <div class="cards-container">
             <div class="card first-card">
-                <figure></figure>
+                <figure>
+                    
+                </figure>
                 <h3>placeholder</h3>
                 <p>big text goes here</p>
                 <button type="button">placeholder</button>
@@ -134,5 +137,6 @@
             <p></p>
         </div>
     </footer>
+
 </body>
 </html>
