Many styles provided. Animations fixed. Need to work on the skills section and fine tune the font.

--- a/main.html
+++ b/main.html
@@ -17,15 +17,14 @@
             <div class="logo-container"><h1>Logo goes here</h1></div>
             <div class="links-container">
                 <ul>
-                    <li>Home</li>
-                    <li><a>Placeholder</li>
-                    <li><a>Placeholder</a></li>
-                    <li><a>Placeholder</a></li>
-                    <li><a>Placeholder</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#skills-section">Skills</li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                 </ul>
             </div>
             <div class="nav-button-container">
-                <button type="button"><a href="#">Placeholder</a></button>
+                <button type="button" class="button"><a href="#contact">CONTACT</a></button>
             </div>
         </nav>
         <section class="below-nav">
@@ -35,13 +34,12 @@
                 <p>I'm</p> 
                 <span>Adrian Saferstein</span> 
                 <p>Front end Developer</p>
-                <button type="button"><a href="#contact">Contact</a></button>
+                <button type="button" class="button"><a href="#contact">Contact</a></button>
             </div>
             <!--right-->
             <div class="right-below-nav">
                 <figure>
-                    <img src="./Imagenes/Others/spacer.png">
-                    <figcaption>An image of a friendly floating spacer</figcaption>
+                    <img alt="An image of a friendly floating spacer" src="./Imagenes/Others/spacer.png">
                 </figure>
             </div>
         </section>
@@ -60,25 +58,25 @@
                 </figure>
                 <h3>placeholder</h3>
                 <p>big text goes here</p>
-                <button type="button">placeholder</button>
+                <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card second-card">
                 <figure></figure>
                 <h3>placeholder</h3>
                 <p>big text goes here</p>
-                <button type="button">placeholder</button>
+                <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card third-card">
                 <figure></figure>
                 <h3>placeholder</h3>
                 <p>big text goes here</p>
-                <button type="button">placeholder</button>
+                <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card fourth-card">
                 <figure></figure>
                 <h3>placeholder</h3>
                 <p>big text goes here</p>
-                <button type="button">placeholder</button>
+                <button type="button2" class="button2">LEARN MORE</button>
             </div>
         </div>
     </main>
@@ -107,8 +105,10 @@
             <!--Left-->
             <div class="faq-intro-container">
                 <p>Frequently asked questions</p>
-                <h2><span>Need help?</span>Let us put your mind at ease</h2>
-                <a href="#contact">Your answer isn't here? Contact us!</a>
+                <h2>Need help?</h2>
+                <h2>Let us put your mind at ease!</h2>
+                <br>
+                <p>Your answer isn't here?</p> <button class="button2">Contact us!</button>
             </div>
             <!--Right-->
             <div class="faq-questions-container">
@@ -122,9 +122,36 @@
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </div>
-                <div class="accordion" aria-expanded="false" role="button"></div>
-                <div class="accordion" aria-expanded="false" role="button"></div>
-                <div class="accordion" aria-expanded="false" role="button"></div>
+                <div class="accordion" aria-expanded="false" role="button">
+                    <h3 class="faq-question"><!--Plus sign is here (h3::before) -->
+                        <i class="fas fa-info-circle"></i>
+                        Lorem Ipsum is simply dummy text of the printing?
+                    </h3>
+                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div class="accordion" aria-expanded="false" role="button">
+                    <h3 class="faq-question"><!--Plus sign is here (h3::before) -->
+                        <i class="fas fa-info-circle"></i>
+                        Lorem Ipsum is simply dummy text of the printing?
+                    </h3>
+                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div class="accordion" aria-expanded="false" role="button">
+                    <h3 class="faq-question"><!--Plus sign is here (h3::before) -->
+                        <i class="fas fa-info-circle"></i>
+                        Lorem Ipsum is simply dummy text of the printing?
+                    </h3>
+                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
 
             </div>
         </div>
@@ -140,9 +167,9 @@
             </div>
             <!--center-->
             <div class="call-center-container">
-                <h3>Time to get that web</h3>
-                <h2>On point</h2>
-                <button>Start now!</button>
+                <h3>MAKE YOUR WEB</h3>
+                <h2>TAKE OFF!</h2>
+                <button type="button" class="button">Start now!</button>
             </div>
             <!--left-->
             <div class="call-left-container">
