Skill section done. Modified font.

--- a/main.html
+++ b/main.html
@@ -47,35 +47,41 @@
     <!--My Skills-->
     <main id="skills-section">
         <header class="skills-header">
-            <h2>placeholder</h2>
-            <p>big text goes here</p>
+            <h3>How can we</h3>
+            <h2>Help you</h2>
         </header>
         <!--Cards-->
         <div class="cards-container">
             <div class="card first-card">
-                <figure>
-                    
-                </figure>
-                <h3>placeholder</h3>
-                <p>big text goes here</p>
+                <i class="fas fa-code"></i>
+                <h4>web</h4>
+                <h3>development</h3>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua."</p>
                 <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card second-card">
-                <figure></figure>
-                <h3>placeholder</h3>
-                <p>big text goes here</p>
+                <i class="fas fa-mobile-alt"></i>
+                <h4>Mobile</h4>
+                <h3>development</h3>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua."</p>
                 <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card third-card">
-                <figure></figure>
-                <h3>placeholder</h3>
-                <p>big text goes here</p>
+                <i class="fab fa-figma"></i>
+                <h4>UX/UI</h4>
+                <h3>Design</h3>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua."</p>
                 <button type="button2" class="button2">LEARN MORE</button>
             </div>
             <div class="card fourth-card">
-                <figure></figure>
-                <h3>placeholder</h3>
-                <p>big text goes here</p>
+                <i class="fas fa-comments"></i>
+                <h4>QA</h4>
+                <h3>Testing</h3>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua."</p>
                 <button type="button2" class="button2">LEARN MORE</button>
             </div>
         </div>
@@ -117,7 +123,7 @@
                         <i class="fas fa-info-circle"></i>
                         Lorem Ipsum is simply dummy text of the printing?
                     </h3>
-                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    <p class="faq-answer">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
@@ -127,7 +133,7 @@
                         <i class="fas fa-info-circle"></i>
                         Lorem Ipsum is simply dummy text of the printing?
                     </h3>
-                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    <p class="faq-answer">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
@@ -137,7 +143,7 @@
                         <i class="fas fa-info-circle"></i>
                         Lorem Ipsum is simply dummy text of the printing?
                     </h3>
-                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    <p class="faq-answer">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
@@ -147,7 +153,7 @@
                         <i class="fas fa-info-circle"></i>
                         Lorem Ipsum is simply dummy text of the printing?
                     </h3>
-                    <p class="faq-answer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    <p class="faq-answer">
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
